@@ -1,5 +1,11 @@
 2013-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* rcsc/player/intercept_table.cpp:
+	* rcsc/player/self_intercept_simulator.cpp:
+	- バックダッシュ回数を制限
+	- ターン回数計算で制御範囲に一貫性が無かったバグを修正
+	- 新しいインターセプトを有効化
+
 	* rcsc/player/intercept_table.h:
 	* rcsc/player/self_intercept_simulator.cpp:
 	* rcsc/player/self_intercept_v13.cpp:
